--- a/blog-frontend-admin/package.json
+++ b/blog-frontend-admin/package.json
@@ -18,7 +18,9 @@
     "react-hook-form": "^7.56.1",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-paginate": "^8.3.0",
     "tailwind-merge": "^3.2.0",
+    "use-debounce": "^10.0.4",
     "zod": "^3.24.3",
     "zustand": "^5.0.3"
   },
