--- a/blog-frontend-admin/package.json
+++ b/blog-frontend-admin/package.json
@@ -12,19 +12,21 @@
     "@hookform/resolvers": "^5.0.1",
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
+    "markdown-it": "^14.1.0",
     "next": "14.2.28",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.56.1",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
-    "react-paginate": "^8.3.0",
+    "react-markdown-editor-lite": "^1.3.4",
     "tailwind-merge": "^3.2.0",
     "use-debounce": "^10.0.4",
     "zod": "^3.24.3",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
