--- a/blog-frontend-admin/tsconfig.json
+++ b/blog-frontend-admin/tsconfig.json
@@ -21,6 +21,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "components/dashboard/blogs/[id]/markdown-renderer.jsx"],
   "exclude": ["node_modules"]
 }
