--- a/blog-frontend-client/package.json
+++ b/blog-frontend-client/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "@tanstack/react-query": "^5.75.6",
     "axios": "^1.9.0",
+    "clsx": "^2.1.1",
     "marked": "^15.0.11",
     "next": "14.2.28",
     "react": "^18",
@@ -18,14 +20,20 @@
     "react-hook-form": "^7.56.1",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-paginate": "^8.3.0",
+    "react-syntax-highlighter": "^15.6.1",
+    "remark-gfm": "^4.0.1",
+    "tailwind-merge": "^3.3.0",
     "use-debounce": "^10.0.4",
     "zod": "^3.24.3"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.74.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "^8",
     "eslint-config-next": "14.2.28",
     "postcss": "^8",
